LW comments on appendix 10 guidelines

--- a/guidelinesWP/10-appendixCaseStudies.Rmd
+++ b/guidelinesWP/10-appendixCaseStudies.Rmd
@@ -104,18 +104,18 @@ Two of the three CUs in this SMU, WCVI-South and WCVI-Nootka & Kyuquot, were ass
 
 Biological benchmarks have been estimated for WCVI indicator stocks using an empirical relationship between watershed area and two stock-recruitment biological benchmarks, spawner abundances at replacement, S~REP~, and S~MSY~, based on a meta-analysis of 25 Chinook stocks across North America <!-- LW comment: suggest replacing with: ... and two stock-recruitment benchmarks: S~REP~ (spawner abundance at replacement) and S~MSY~, based on...-->   [@parkenHabitatbasedMethodsEstimate2006]. Lack of rigorous recruitment data for WCVI Chinook stocks precludes the use of stock-recruitment based benchmarks. For the development of LRPs for WCVI Chinook, the empirical relationship between watershed area and S~REP~ was re-estimated using a hierarchical Bayesian model [as in @liermannUsingAccessibleWatershed2010], and applied to WCVI Chinook inlets. 
 
-We characterized CU status in two ways for this case study, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ derived from watershed-area model estimates of S~REP~ and productivity derived from a life-stage specific survival model with expert opinion. We calculated two types of LRPs: proportional LRPs and projection regression LRPs. Based on CU-level assessments, there were no years in the historical data where all CUs were above the Red zone, so it was not possible to identify logistic regression LRPs.  Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide projection regression <!-- LW comment: delete regression?-->LRPs for illustrative purposes. Fisheries are managed based on a combination of the bilateral Canada-US management regime specified under the Pacific Salmon Treaty and local co-governance. We implemented sensitivity analyses on projection regression LRPs across two key uncertainties: variability in exploitation among inlets and intrinsic productivity. Further analyses exploring impacts of exploitation, variability in intrinsic productivity, and capacity are provided in Appendix D of Holt et al. in (review).
+We characterized CU status in two ways for this case study, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ derived from watershed-area model estimates of S~REP~ and productivity derived from a life-stage specific survival model with expert opinion. We calculated two types of LRPs: proportional LRPs and projection regression LRPs. Based on CU-level assessments, there were no years in the historical data where all CUs were above the Red zone, so it was not possible to identify logistic regression LRPs.  Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide projection regression <!-- LW comment: delete regression?-->LRPs for illustrative purposes. Fisheries are managed based on a combination of the bilateral Canada-US management regime specified under the Pacific Salmon Treaty and local co-governance. We implemented sensitivity analyses on projection regression <!-- LW comment: delete regression?-->LRPs across two key uncertainties: variability in exploitation among inlets and intrinsic productivity. Further analyses exploring impacts of exploitation, variability in intrinsic productivity, and capacity are provided in Appendix D of Holt et al. in (review).
 
-We found that status was consistent across the LRP methods that were available, and with a previously published assessment. However, projection regression LRPs were highly sensitive to underlying population productivities. Although the base-case LRP assumes a relatively diffuse distribution of productivities aligned with the range of expert opinion, declines (by 25%) or increases (by 50%) in the distribution of productivities among inlets resulted in large changes in LRPs estimates. 
+We found that status was consistent across the LRP methods that were available, and with a previously published assessment. However, projection regression <!-- LW comment: delete regression?-->LRPs were highly sensitive to underlying population productivities. Although the base-case LRP assumes a relatively diffuse distribution of productivities aligned with the range of expert opinion, declines (by 25%) or increases (by 50%) in the distribution of productivities among inlets resulted in large changes in LRPs estimates. 
 
 
 ## INSIDE SOUTH COAST CHUM - NON-FRASER
 
-The Inside South Coast Chum - Non-Fraser SMU (hereafter ISC Chum) includes seven CUs of chum salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island. Chum salmon CUs spawning in the Fraser River watershed are excluded from this SMU as they have been categorized as a separate SMU, Inside South Coast Chum - Fraser. While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fisheries and freshwater habitats. @godboutStockStatusWild2004 identified variable but stable status in the central and southern portions of this SMU, with declines in the north, especially in the region defined by the Southern Coastal Streams CU component. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional WSP assessment of status.  Spawner abundances tend to be only very weakly correlated among CUs for this SMU, with an average correlation of 0.12 (Figure \@ref(fig:density-cor-plot)). 
+The Inside South Coast Chum - Non-Fraser SMU (hereafter ISC Chum) includes seven CUs of chum salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island. Chum salmon CUs spawning in the Fraser River watershed are excluded from this SMU as they have been categorized as a separate SMU (Inside South Coast Chum - Fraser). While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fisheries and freshwater habitats. @godboutStockStatusWild2004 identified variable but stable status in the central and southern portions of this SMU, with declines in the north, especially in the region defined by the Southern Coastal Streams CU component. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional WSP assessment of status.  Spawner abundances tend to be only very weakly correlated among CUs for this SMU, with an average correlation of 0.12 (Figure \@ref(fig:density-cor-plot)). 
 
-The ISC Chum SMU is considered data-limited. While escapement time series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions in order to produce a standardized data set over the full length of the time series. The quality of recruitment data is not sufficient to reliably estimate parameters from stock-recruit relationships for the use in stock-recruitment benchmarks. Instead, benchmarks were calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks) to inform WSP status, as recommended by @holtEvaluatingBenchmarksBiological2018. We removed three hatchery-dominated systems from the Georgia Strait CU (PNI <<0.5). The remaining systems had little or no hatchery enhancement (PNI likely >0.72)<!-- LW: definitely want to check with Pieter Van Will on this and skim that report from SEP-->. Where available, annual estimates of hatchery-origin spawners were removed from total spawner abundances. <!--CH: I revised this to better match the ISC chum chapter, after discussion with Luke on Dec. 15-->
+The ISC Chum SMU is considered data-limited. While escapement time series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions in order to produce a standardized data set over the full length of the time series. The quality of recruitment data is not sufficient to reliably estimate parameters from stock-recruit relationships for use in stock-recruitment benchmarks. Instead, benchmarks were calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks) to inform WSP status, as recommended by @holtEvaluatingBenchmarksBiological2018. We removed three hatchery-dominated systems from the Georgia Strait CU (PNI $\ll$ 0.5). The remaining systems had little or no hatchery enhancement (PNI likely $>$ 0.72)<!-- LW: definitely want to check with Pieter Van Will on this and skim that report from SEP-->. Where available, annual estimates of hatchery-origin spawners were removed from total spawner abundances. <!--CH: I revised this to better match the ISC chum chapter, after discussion with Luke on Dec. 15-->
 
-For this case study, we consider two approaches for characterizing CU status: (1) the Pacific Salmon Status Scanner and (2) a single-metric on spawner abundances using percentile-based benchmarks. We applied both the proportional LRP and logistic-regression based LRPs to this case study and evaluated the sensitivity of SMU-level status from proportional LRPs to various data inputs. Because of poor fit of the logistic regression as shown by model diagnostics, were we not able to generate reliable logistic regression LRPs for this SMU.
+For this case study, we consider two approaches for characterizing CU status: (1) the Pacific Salmon Status Scanner and (2) a single-metric on spawner abundances using percentile-based benchmarks. We applied both the proportional LRP and logistic regression LRPs to this case study and evaluated the sensitivity of SMU-level status from proportional LRPs to various data inputs. We were not able to generate reliable logistic regression LRPs for this SMU because logistic regression models did not fit the data well, as shown by model diagnostics.
 
 
 We found that assessments based on the Pacific Salmon Status Scanner gave identical results to the single-metric on spawner abundances relative to percentile-based benchmarks. Also, as for Interior Fraser River Coho, increasing the number of CUs included in analyses always resulted in more pessimistic statuses relative to the LRP. 
