--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -30,7 +30,7 @@ obligations to identify limit reference points (LRPs) for major fish stocks pres
 
 Amendments to the Canadian *Fisheries Act* (2019) include new Fish Stocks provisions that introduce legal obligations to manage stocks to promote sustainability and avoid biological limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions experienced by the stock. These obligations apply to major fish stocks that are prescribed under regulations. They reinforce the previously established DFO policies to manage stocks consistent with the precautionary approach. These include [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm) [@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005].
 
-Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is expected to occur to the stock. Serious harm can result from over-fishing, other human induced mortality, or changes in population dynamics [@dfoHarvestStrategyCompliant2006]. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks is generally described in terms of impaired productivity due to changes in recruitment, growth, maturation and survival [@dfoProceedingsNationalPeer2016a], where resulting declines are irreversible or slow to be reversed [@kronlundSelectionRoleLimit2018]. Serious harm can occur due to depensatory mortality (or Allee effects) that occur because of, for example, increased predation rates or inability to find mates at very low abundances [@chenIncorporatingAlleeEffects2002]. Serious harm can also be associated with loss of resilience [@smithTechnicalGuidelinesProvision2012] and the inability to recover from perturbations [@dfoFisheryDecisionMakingFramework2009] due changes in stock structure or losses of phenotypic and genotypic diversity.
+Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is expected to occur to the stock. Serious harm can result from over-fishing, other human induced mortality, or changes in population dynamics [@dfoHarvestStrategyCompliant2006]. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks is generally described in terms of impaired productivity due to changes in recruitment, growth, maturation and survival [@dfoProceedingsNationalPeer2016a], where resulting declines are irreversible or slow to be reversed [@kronlundSelectionRoleLimit2018]. Serious harm can occur due to depensatory mortality (or Allee effects) that occur because of, for example, increased predation rates or inability to find mates at very low abundances [@chenIncorporatingAlleeEffects2002]. Serious harm can also be associated with loss of resilience [@smithTechnicalGuidelinesProvision2012] and the inability to recover from perturbations [@dfoFisheryDecisionMakingFramework2009] due to changes in stock structure or losses of phenotypic and genotypic diversity.
 Because population dynamics are not well understood at low population sizes [@dfoHarvestStrategyCompliant2006] and Allee effects are only infrequently observed in marine fish species [@keithPopulationDynamicsMarine2012]<!--[but see @chenIncorporatingAlleeEffects2002 and @cunninghamSizeSelectivityPredation2013]-->, a biological basis for serious harm is often difficult to identify and quantify. 
 
 The definition of serious harm from @dfoFisheryDecisionMakingFramework2009 indicates that LRPs should be *above* the level where serious harm is expected to occur, not at the level where it is occurring, and that long-term losses of fishing opportunities may occur below that level.  Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring [@hilbornQuantitativeFisheriesStock1986]. Also, this definition of serious harm includes possible impacts on other ecosystem components, which are often challenging to identify because of limited data and poor understanding of ecosystem linkages and dynamics [but see @chagarisEcologicalReferencePoints2020].
@@ -66,7 +66,7 @@ While the assessment of Pacific salmon under the WSP has focused on setting benc
 In addition to intrinsic biological reasons for assessing status at the CU scale, this scale is also relevant for key threats and management activities for Pacific salmon, e.g., restoration of freshwater spawning or rearing habitat and hatchery enhancement. While the Fish Stocks provisions pertain to fisheries at scales relevant to harvest management, for many SMUs fisheries have been restricted in recent decades [@grantStateCanadianPacific2020], such that habitat and hatchery management are playing an increasingly dominant role in management responses. Threats and management responses also extend to larger regional scales, e.g., mitigating climate impacts. Therefore, stock assessments are required at a hierarchy of spatial scales from CUs to aggregates of CUs at regional scales, sometimes across Pacific salmon species. 
 
 
-Given the existing framework for assessing status of Pacific salmon by CU [@holtIndicatorsStatusBenchmarks2009] and the similar intent between LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, status against lower benchmarks can be used as proxies for status against for LRPs but applied at the scale of CUs instead of SMUs. The present work expands on assessment methods developed under the WSP by providing guidance on establishing LRPs at the scale of Pacific salmon SMUs by integrating across CU-level statuses within an SMU. At finer spatial scales, the existing framework for CU assessments includes consideration of the distribution of spawners within CUs, e.g., at the stream level [@dfoIntegratedBiologicalStatus2016]. Here we also consider distribution at sub-populations within CUs when those are considered to be important for the sustainability of the CU or SMU. Identifying relevant spatial scales within CUs can be challenging due to variability in meta-population dynamics and uncertain impacts on long-term viability, which represents a key source of uncertainty when defining LRPs.
+Given the existing framework for assessing status of Pacific salmon by CU [@holtIndicatorsStatusBenchmarks2009] and the similar intent between LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, status against lower benchmarks can be used as proxies for status against LRPs but applied at the scale of CUs instead of SMUs. The present work expands on assessment methods developed under the WSP by providing guidance on establishing LRPs at the scale of Pacific salmon SMUs by integrating across CU-level statuses within an SMU. At finer spatial scales, the existing framework for CU assessments includes consideration of the distribution of spawners within CUs, e.g., at the stream level [@dfoIntegratedBiologicalStatus2016]. Here we also consider distribution at sub-populations within CUs when those are considered to be important for the sustainability of the CU or SMU. Identifying relevant spatial scales within CUs can be challenging due to variability in meta-population dynamics and uncertain impacts on long-term viability, which represents a key source of uncertainty when defining LRPs.
 
 Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC which largely align with DFO's CUs, and Stock Groups under the Pacific Salmon Treaty, which align to some extent with SMUs. These units are not considered further here. Although the LRPs presented here are intended to be applied at the SMU scale, these methods could also be applied at smaller or larger scales to inform a variety of management decisions.
 
@@ -122,7 +122,7 @@ In particular, this paper has six sections:
 
 3. Principles for the development of LRPs for Pacific salmon
 
-4. A description of candidate LRP methods, with further details in Holt et al. (In review). Appendix \@ref(app:case-studies) summaries their application to three case studies.
+4. A description of candidate LRP methods, with further details in Holt et al. (In review). Appendix \@ref(app:case-studies) summarizes their application to three case studies.
 
 5. Guidelines on the implementation of LRPs including recommendations on when, and when not to use each candidate LRP method
 
